--- a/Frontend/src/app/user-details/user-details.component.html
+++ b/Frontend/src/app/user-details/user-details.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<p>uer details works</p>
+<h1>List of all authenticated user!!!!!!!</h1>
 
 <div class="container text-center mt-5 mb-2">
     <h2>User Profiles</h2>
