--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -31,8 +31,13 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/upload" routerLinkActive="active">Upload</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" *ngIf="_authservice.loggedIn()&&getloguser()"routerLink="/userdetails" routerLinkActive="active" (focusin)='getloguser()'>Sadmin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="_authservice.loggedIn()&&getissues()"routerLink="/issues" routerLinkActive="active" (focusin)='getissues()'>Reports</a>
+
         </li>
       </ul>
       <ul class="navbar-nav">
