--- a/Frontend/src/app/upload/upload.component.css
+++ b/Frontend/src/app/upload/upload.component.css
@@ -1,4 +1,31 @@
+ .wrapper {
+    margin-left: 500px;
+    display: flex;
+    width: 100%;
+ }
 video{
     width: 400px;
     height:400px;
 }
+
+button{
+    padding: 10px 30px;
+    margin-left: 500px;
+    background:  rgb(149, 127, 164);
+    border: none;
+    color: rgb(24, 21, 21);
+    border-radius: 40px;
+    font-size: 14px;
+    text-decoration: none;
+    transition: all .3s ease-in;
+   
+   
+    }
+    button:hover{
+    background: transparent;
+    color: #9366e6;
+    border: 2px solid #cec7cb;
+    }
+    input.ng-touched.ng-invalid{
+        border: 1px solid red;
+    }
