--- a/Frontend/src/app/user-details/user-details.component.html
+++ b/Frontend/src/app/user-details/user-details.component.html
@@ -11,9 +11,13 @@
                 <h3 class="mt-3 name">{{user.username}}</h3><span class="work d-block">{{user.role}}             
                     <button  (click)="makeAdmin()" >Admin </button> &nbsp;&nbsp;  
                     <button (click)="makeUser()"> NotAdmin</button> -->
-<div class="container mt-3">
-    <div class="row">
+<div class="container mt-3" >
+    <div class="row" >
         <div class="col-md-4" *ngFor="let user of users">
+            <div class="shadow p-3 mb-5 bg-body rounded">
+            <div class="card" style="width:400px;"> 
+                
+                <div class="card-body">
             <h3 class="mt-3 name">Username:{{user.username}}</h3>
             <h3 class ="mt-3 name">Role:{{user.role}}</h3>
             <br>
@@ -21,12 +25,12 @@
             <button (click)="makeUser(user)"> NotAdmin</button>
             <br>
         </div>
-        
+    </div>
     </div>
 
-
+</div>
 </div>
              
-            <!-- </div> -->
+            </div>
 <!-- </div> -->
 <!-- </div> -->
